[gd_scene load_steps=20 format=3 uid="uid://b0l4pcu0l5b5m"]

[ext_resource type="Script" uid="uid://car3ut1gbhrb6" path="res://player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://dtejqbb3is2cq" path="res://dash_ghost.tscn" id="2_i3pqv"]
[ext_resource type="Texture2D" uid="uid://b2v6argqxr1vb" path="res://platformer_sprite_sheet3.png" id="2_onrkg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(15, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(23, 32)

[sub_resource type="Animation" id="Animation_hqtel"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_onrkg"]
resource_name = "blink"
length = 2.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.60254, 0.80254, 1.0032909, 1.8000001, 2.000751),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 16, 8, 16, 8, 16, 8]
}

[sub_resource type="Animation" id="Animation_1jxqw"]
resource_name = "fall"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_n7ghd"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 13]
}

[sub_resource type="Animation" id="Animation_nvl01"]
resource_name = "dash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [18, 19]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dw050"]
_data = {
&"RESET": SubResource("Animation_hqtel"),
&"blink": SubResource("Animation_onrkg"),
&"dash": SubResource("Animation_nvl01"),
&"fall": SubResource("Animation_1jxqw"),
&"hurt": SubResource("Animation_n7ghd"),
&"idle": SubResource("Animation_i3pqv"),
&"jump": SubResource("Animation_2hs0m"),
&"run": SubResource("Animation_sweqy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(28, 38)

[sub_resource type="Animation" id="Animation_b26j0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dw050"]
resource_name = "iframes"
length = 0.12
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.5058824), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7ghd"]
_data = {
&"RESET": SubResource("Animation_b26j0"),
&"iframes": SubResource("Animation_dw050")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 7.0
height = 20.0

[node name="Player" type="CharacterBody2D" groups=["player", "player_"]]
script = ExtResource("1_onrkg")
dash_ghost_scene = ExtResource("2_i3pqv")
JUMP_VELOCITY = -300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_onrkg")
hframes = 20
frame = 8

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.5, 3)
scale = Vector2(0.7, 0.7)
shape = SubResource("RectangleShape2D_i3pqv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dw050")
}

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_bottom = 180

[node name="PickupBox" type="Area2D" parent="."]
visibility_layer = 2
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupBox"]
shape = SubResource("RectangleShape2D_hqtel")

[node name="IFramesTimer" type="Timer" parent="." groups=["player_"]]
one_shot = true

[node name="IFrameAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n7ghd")
}

[node name="MoveFreezeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["player"]]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 9)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_onrkg")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="area_entered" from="PickupBox" to="." method="_on_pickup_box_area_entered"]
[connection signal="body_entered" from="PickupBox" to="." method="_on_pickup_box_body_entered"]
[connection signal="timeout" from="IFramesTimer" to="." method="_on_i_frames_timer_timeout"]
[connection signal="timeout" from="MoveFreezeTimer" to="." method="_on_move_freeze_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
